--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,9 @@
     <title>Chong Lee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <!-- <script src="main.js"></script> -->
+    <link href='https://fonts.googleapis.com/css?family=Fontdiner Swanky' rel='stylesheet'>  
 </head>
+
 <body>
     <div id="mainBox">
     <div id="yourName">
@@ -15,8 +16,8 @@
     </div>
 
     <nav>
-        <a href="index.html">About</a>|
-        <a href="portfolio.html">Portfolio</a>|
+        <a href="index.html">About |</a>
+        <a href="portfolio.html">Portfolio |</a>
         <a href="contact.html">Contact</a>
     </nav>
 
@@ -34,9 +35,7 @@
             <p><div class="cform">Message </div>
                 <textarea type="text" name="message" rows="10" cols="30"></textarea>
             </p>
-            <!-- <div id="cSubmit"> -->
             <input type="submit" value="Submit">
-            <!-- </div> -->
         </form>
     </div>
 
