--- a/portfolio.html
+++ b/portfolio.html
@@ -52,10 +52,10 @@
         
         </div>
         <div class="pImage">
-            <a href="https://www.amazon.com">
+            <a href="https://cvanglee.github.io/unit-4-game/">
                 <img width="250px" height="200px" src="assets/images/rpgGame.jpg">
             </a>
-            <div class="projectName">RPG Game</div>
+            <div class="projectName">Crystal Collector Game</div>
             <div class="text">Let's Play!</div>
             
         </div>
